# bridge_backend

./: .dockerignore  DATA_FORMAT_SPEC.md  DEPLOYMENT_COMPLETE.md  Dockerfile  MINIMUM_APPS_ARCHITECTURE.md  Makefile  README.md  SETTINGS_GUIDE.md  STORAGE_SETUP.md  openapi-schema.yaml  pyproject.toml  requirements.txt
.github/: DEVELOPMENT.md  PULL_REQUEST_TEMPLATE.md
.github/actions/add-test-labels/: action.yml
.github/actions/build-image/: action.yml
.github/actions/deploy-cloudrun/: action.yml
.github/actions/execute-job/: action.yml
.github/actions/load-from-cache/: action.yml
.github/actions/push-image/: action.yml
.github/actions/run-quality-checks/: action.yml
.github/actions/run-security-scan/: action.yml
.github/actions/run-smoke-test/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/verify-test-labels/: action.yml
.github/operations/: README.md  create-superuser.sh  drop-tables.sh  migrate.sh  seed-groups.sh  view-logs.sh
.github/workflows/: README.md  ci.yml  manual-operations.yml
app/: db.sqlite3  manage.py
app/accounts/: admin.py  models.py
app/accounts/management/commands/: create_hardcoded_admin.py  seed_groups.py
app/accounts/migrations/: 0001_initial.py
app/bridge_backend/: asgi.py  auth_viewsets.py  health.py  settings.py  storage.py  urls.py  wsgi.py
app/bridge_backend/core/: authentication.py
app/bridge_backend/settings/: __init__.py  base.py  development.py  local.py  production.py  staging.py
app/leads/: admin.py  models.py  models_forms.py  pdf_generator.py  permissions.py  serializers.py  viewsets.py
app/leads/management/commands/: seed_forms.py  setup_database_schemas.py
app/leads/migrations/: 0001_initial.py  0002_alter_lead_agent_formtemplate_lead_form_template_and_more.py  0003_client_lead_client.py  0004_lead_pdf_file.py
app/leads/templates/leads/: pdf_template.html
app/products/: admin.py  models.py  serializers.py  viewsets.py
app/products/management/commands/: seed_insurance_categories.py
app/products/migrations/: 0001_initial.py
